--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aprendiendo css</title>
    
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="status.css">
 </head>
 <body>
 
